# Advance

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  TODO.md
8_Queen/: CMakeLists.txt  README.md  input.txt  input_small.txt  main.cpp  output.txt  output_small.txt  solution.cpp
Airplane_Game/: CMakeLists.txt  README.md  eval_input_small.txt  main.cpp  output.txt
Array_Game/: CMakeLists.txt  README.md  input_small.txt  main.cpp  output.txt  solution.cpp
Assigning_a_Meeting_Room/: solution.cpp
Assimilation_of_String/: main.cpp  output.txt
Attacking_the_Citadel/: README.md  input.txt  main.cpp  question.txt  solution-dfs.cpp  solution-prim.cpp  solution.cpp
Battle_City/: README.md  Source.cpp  input.txt  solution.cpp
Bipartition_Cities/: Bipartitioning+Cities.docx  Source.cpp  input.txt
Bipartitioning_Cities/: BipartitionCities_Guide.pptx  README.md  input.txt  sample_output.txt
Bishop/: README.md  input.txt  main.cpp  output.txt  solution.cpp
Block_Dropping/: main.cpp  test_input.txt
Bridge/: README.md  README_vi.md  eval_input.txt  eval_input_small.txt  input.txt  main.c  main.cpp  output.txt
Bubble_Shooter/: README.md  input.txt  output.txt
Calculator_1/: README.md  Source.cpp  cal1_test_input.txt
Calculator_2/: README.md  main.cpp
Calculator_3/: README.md
Capture_Knight/: README.md  Source.cpp  eval_input.txt  eval_input_small.txt  eval_output.txt  input.txt  input_small.txt  main.cpp
Checking_cube/: main.cpp  output.txt
Chess_rook/: README.md  eval_input_1.txt
Cleaning_Robot/: README.md  input.txt  input_small.txt  output_small.txt  solution.cpp
Cryptogram_1/: Source.cpp
Cryptogram_2/: Source.cpp
Cryptogram_3/: Source.cpp
Cutting_Paper/: CuttingPieceColoredPaper_input.txt  CuttingPieceColoredPaper_input_small.txt  CuttingPieceColoredPaper_output.txt  README.md  input.txt  main.cpp  output.txt
Dominos/: README.md  output.txt  solution.java
Earning_Money_2/: EarningBiggestPrizeMoney.java  README.md  Source.cpp  eval_input.txt  eval_input_small.txt  main.cpp  output.txt
Farm_Protect/: README.md  README_vi.md  desktop.ini  main.cpp  main.java  question.txt  test.txt
Find_Cycle/: Find cycle.cpp  README.md  Source.cpp  input.txt  main.cpp  output.txt
Finding_Mode/: input2.txt
Flatten/: README.md  Source.cpp  flatten_test_input_2.txt  main.cpp
GNS/: main.cpp
Game_with_numbers/: CMakeLists.txt  README.md  eval_input.txt  eval_output.txt  input.txt  input_small.txt  main.cpp  solution.cpp  temp.cpp
Grid_Acid/: input_small.txt  main.cpp  output.txt  output_small.txt
Honeymoon/: README.md  input.txt  output.txt
Hugo/: README.md  input.txt  main.cpp  output.txt  solution.cpp
Hugo_Advertising/: README.md  solution.cpp  solution.java
Hugo_Gold_Miner/: input.txt  output.txt
Hugo_Gold_Miner_2/: README_vi.md
Hugo_Homecoming/: README.md  README_vi.md  input.txt  main.cpp  output.txt  solution.cpp
Hugo_Oil_Trading/: README.md  input_small.txt  main.cpp  output_small.txt
Hugo_Region_Counting/: README.md  input.txt  output.txt
Hugo_Sells_Oil/: README.md  main.cpp  solution.cpp
Hugo_Shipper/: input.txt
Hugo_Steals_Honey/: README.md  output.txt
Hugo_Takes_the_Train/: solution.java
Ice_Cave/: README.md  eval_input_small.txt  main.cpp  output.txt
Interstellar/: input.txt  main.cpp
Involution/: main.cpp
Knight/: README.md  input.txt  main.cpp  output.txt  solution.cpp  solution.java
Ladder_1/: ladder1_test_input.txt
Ladder_2/: main.cpp  output1.txt
Laughing_Bomb/: README.md  Source.cpp  eval_input.txt  eval_output.txt  output.txt  test.txt
Magnetic/: magnetic.txt  main.cpp
Map_Coloring/: README.md  input.txt  input_small.txt  output.txt  output_small.txt
Mario/: README.md  input.txt
Matrix_Product/: CMakeLists.txt  MatrixProduct1_input.txt  MatrixProduct1_input_small.txt  Matrix_Product.cpp  README.md  Source - Copy.cpp  Source.cpp  input.txt  input_small.txt  main.cpp  output_small.txt
Maze_1/: main.cpp
Move_Cow/: README_vi.md  main.cpp  output.txt
Painting/: README.md  eval_input.txt  output.txt
Palindrome_2/: Source.cpp
Paring_Parentheses/: Source.cpp  p-matching_test_input.txt
Partition_1/: README.md  input.txt  input_small.txt  output.txt  output_small.txt
Password/: main.cpp
Password_Generator/: Source.cpp
Path_Finding/: CMakeLists.txt  README.md  Stack.cpp  input.txt  main.cpp  output.txt
Pizza_Location/: input.txt  solution.cpp
Point_of_Balance-2/: Source.cpp  input.txt  sample_input2.txt
Point_of_Balance_2/: README.md  Source.cpp  input.txt
Princess/: README.md  Source.cpp  input.txt  main.cpp  output.txt
Problems/: CMakeLists.txt
Problems/Farm_Protect/: CMakeLists.txt  README_vi.md  main.cpp  main.java  output.txt  question.txt  test.txt
Route_Finding/: README.md  Route Finding.cpp  main.cpp  out.txt  test.txt
SAMPLE_TEST_1_09_08_2023/: output.txt  test.cpp
SAMPLE_TEST_2_09_08_2023/: input.txt  test.txt
SAMPLE_TEST_3_09_08_2023/: BpV_debai.txt  BpV_input.txt  main.cpp
SAMPLE_TEST_4_10_08_2023/: main.cpp  output.txt
SAMPLE_TEST_5_10_08_2023/: VMV_debai.txt
SAMPLE_TEST_6_10_08_2023/: Ngo_Van_Canh.cpp
SAMPLE_TEST_7_11_08_2023/: main.cpp
SAMPLE_TEST_8_11_08_2023/: Lake_eval_input.txt  main.cpp  test.txt
Sea_Level/: input_small.txt  main.cpp  output_small.txt  solution.cpp  solution2.cpp
Seawater/: README.md
Sky_Map/: README.md  Source2.cpp  debai.txt  eval_input.txt  eval_output.txt  main.cpp  method1.c
Stock_Exchange/: README.md  input1.txt  output.txt
String/: input.txt
Sudoku_1/: README.md  main.cpp  sample_output.txt
The_Frog/: README.md  input.txt
Tree_Set_2/: README.md  input.txt  input_small.txt  output_small.txt
Turn_Over_Game/: README.md  eval_input.txt
Uniform_Distribution/: README.md  input.txt  main.cpp
(+348 files in other folders)
