cmake_minimum_required(VERSION 3.10)
project(DSA)

if(MSVC)
  # warning C4996: 'freopen': This function or variable may be unsafe.
  # Consider using fopen_s instead.
  # To disable deprecation, use _CRT_SECURE_NO_WARNINGS.
  # See online help for details.
  add_definitions(/wd4996)
endif()

# Generate Clangd compile_commands.json
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Avoid MSBuild putting Debug and Release in seperate folder
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")

add_library(compiler_flags INTERFACE)
target_compile_features(compiler_flags INTERFACE cxx_std_11)

include_directories(${CMAKE_SOURCE_DIR}/shared/Queue)
include_directories(${CMAKE_SOURCE_DIR}/shared/Stack)
include_directories(${CMAKE_SOURCE_DIR}/shared/Point)
include_directories(${CMAKE_SOURCE_DIR}/shared/Graph)

add_subdirectory(8_Queen)
# add_subdirectory(Airplane_Game)
add_subdirectory(Array_Game)
add_subdirectory(Attacking_the_Citadel)
# add_subdirectory(Battle_City)
# add_subdirectory(Bipartitioning_Cities)
# add_subdirectory(Block_Dropping)
# add_subdirectory(Bridge)
# add_subdirectory(Calculator_1)
# add_subdirectory(Calculator_2)
# add_subdirectory(Calculator_3)
add_subdirectory(Capture_Knight)
add_subdirectory(Checking_cube)
# add_subdirectory(Chess_rook)
# add_subdirectory(Cleaning_Robot)
# add_subdirectory(Cryptogram_1)
# add_subdirectory(Cryptogram_2)
# add_subdirectory(Cryptogram_3)
add_subdirectory(Cutting_Paper)
# add_subdirectory(Dominos)
add_subdirectory(Earning_Money_2)
# add_subdirectory(Farm_Protect)
add_subdirectory(Find_Cycle)
# add_subdirectory(Finding_Mode)
# add_subdirectory(Flatten)
add_subdirectory(Game_with_numbers)
# add_subdirectory(GNS)
# add_subdirectory(Hugo)
# add_subdirectory(Hugo_Gold_Miner_2)
add_subdirectory(Hugo_Sells_Oil)
add_subdirectory(Ice_Cave)
# add_subdirectory(Involution)
# add_subdirectory(Ladder_1)
# add_subdirectory(Ladder_2)
# add_subdirectory(Laughing_Bomb)
# add_subdirectory(Magnetic)
add_subdirectory(Map_Coloring)
add_subdirectory(Matrix_Product)
# add_subdirectory(Matrix_Sum)
# add_subdirectory(Maze_1)
# add_subdirectory(Maze_2)
# add_subdirectory(Move_Cow)
# add_subdirectory(Painting)
# add_subdirectory(Palindrome_1)
# add_subdirectory(Palindrome_2)
# add_subdirectory(Paring_Parentheses)
# add_subdirectory(Partition_1)
# add_subdirectory(Password)
# add_subdirectory(Password_Generator)
add_subdirectory(Path_Finding)
# add_subdirectory(Point_of_Balance_2)
add_subdirectory(Princess)
add_subdirectory(Route_Finding)
# add_subdirectory(SAMPLE_TEST)
add_subdirectory(Sea_Level)
# add_subdirectory(Sky_Map)
# add_subdirectory(Stock_Exchange)
# add_subdirectory(String)
# add_subdirectory(Sudoku_1)
# add_subdirectory(The_Frog)
# add_subdirectory(Tree_Set_2)
# add_subdirectory(Turn_Over_Game)
# add_subdirectory(Uniform_Distribution)
# add_subdirectory(Upgrade_Computer)
# add_subdirectory(View)
add_subdirectory(Village)
# add_subdirectory(Wedding)
add_subdirectory(Well_Project)

# For testing
add_subdirectory(shared/Stack)
add_subdirectory(shared/Point)



